--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
+  "homepage": "https://emy2024.github.io/",
   "name": "portfolio",
-  "homepage": "https://emy2024.github.io/emmanuelle-rey/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
